2015-11-13  Paul Eggert  <eggert@cs.ucla.edu>

	Fix buffer overruns in run_stages index array

	* m17n-flt.c (run_stages): Fix off-by-one bug in computing array
	length; here, TO_POS is inclusive, not exclusive.
	Also, do not overrun buffer if g_indices[len - 1] == -1.

2015-08-29  K. Handa  <handa@gnu.org>

	* internal-gui.h (MGlyph): New member libotf_positioning_type.

	* font-ft.c (ft_drive_otf): Define it for HAVE_OTF and not
	HAVE_OTF separately.  Adjusted for the new libotf functions
	OTF_drive_gsub_features and OTF_drive_gpos_features.

2015-08-29  Mike FABIAN  <mfabian@redhat.com>

	* input.c (load_translation, filter): Fix type (int -> MSymbol).

2015-04-05  K. Handa  <handa@gnu.org>

	* m17n-flt.h (MFLTGlyph): Fix documentation.

2014-12-10  K. Handa  <handa@gnu.org>

	* Version 1.7.0 released.

2014-11-11  K. Handa  <handa@gnu.org>

	* .gitignore: Converted from .cvsigore.

	* .cvsignore: Delete it.

2014-03-23  K. Handa  <handa@gnu.org>

	* input.c (filter): Do not increment the reference count of
	ic->produced.

2014-03-12  K. Handa  <handa@gnu.org>

	* m17n.h (minput_parse_im_names): Extern it.

	* mtext.c (insert): Preserve the tailing NULL.

	* input.c (create_ic_for_im): New argument `current'.  Caller
	changed.
	(pop_im): Reset the pushed input method.
	(filter): Update ic_info and im_info after popping and pushing.

2014-03-07  K. Handa  <handa@gnu.org>

	* input.c (prepare_fallback_input_methods): Use
	minput_parse_im_names.
	(re_init_ic): Do not save and restore ic_info->fallbacks.
	(check_fallback): Check if map->submaps is NULL.
	(minput_parse_im_names): New function.

	* plist.c (read_mtext_element): Be sure that the first argument to
	read_mtext_element is null terminated.

2014-02-09  K. Handa  <handa@gnu.org>

	* internal.h (M17N_OBJECT_UNREF): Set an object having extended
	count to NULL if it is freed.

2014-02-09  K. Handa  <handa@gnu.org>

	Changes to implement fallback input methods.

	* input.h (MIMInputStack): New type.