@@ -1,3 +1,9 @@
+2016-02-28  handa  <handa@gnu.org>
+
+	* input.c (minput_parse_im_names): Fix a parsing bug of an input
+	methods name that omits the
+	language part.
+
 2015-11-13  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Fix buffer overruns in run_stages index array
